// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`import flow from an exported JSON file > 'import a deprecated flow partial succ…' 1`] = `
{
  "children": [
    {
      "81HAL73ElW": [],
    },
    {
      "Hz22QyhCpj": [],
    },
    {
      "THgI9WvsJh": [],
    },
  ],
  "edges": [
    {
      "id": "reactflow__edge-81HAL73ElWoutput-Hz22QyhCpjinput",
      "source": "81HAL73ElW",
      "sourceHandle": "output",
      "target": "Hz22QyhCpj",
      "targetHandle": "input",
    },
    {
      "id": "reactflow__edge-Hz22QyhCpjoutput-THgI9WvsJhinput",
      "source": "Hz22QyhCpj",
      "sourceHandle": "output",
      "target": "THgI9WvsJh",
      "targetHandle": "input",
    },
  ],
  "eipIds": [
    {
      "name": "inbound-gateway",
      "namespace": "web-services",
    },
    {
      "name": "transformer",
      "namespace": "integration",
    },
    {
      "name": "outbound-gateway",
      "namespace": "http",
    },
  ],
  "layout": {
    "density": "comfortable",
    "orientation": "horizontal",
  },
  "nodes": [
    {
      "data": {
        "label": "ws-in",
      },
      "dragging": false,
      "height": 124,
      "id": "81HAL73ElW",
      "position": {
        "x": 0,
        "y": 0,
      },
      "selected": false,
      "sourcePosition": "right",
      "targetPosition": "left",
      "type": "eipNode",
      "width": 128,
    },
    {
      "data": {},
      "dragging": false,
      "height": 87,
      "id": "Hz22QyhCpj",
      "position": {
        "x": 203,
        "y": 18.5,
      },
      "selected": false,
      "sourcePosition": "right",
      "targetPosition": "left",
      "type": "eipNode",
      "width": 99,
    },
    {
      "data": {},
      "dragging": false,
      "height": 121,
      "id": "THgI9WvsJh",
      "position": {
        "x": 377,
        "y": 5.5,
      },
      "selected": false,
      "sourcePosition": "right",
      "targetPosition": "left",
      "type": "eipNode",
      "width": 109,
    },
  ],
}
`;

exports[`import flow from an exported JSON file > 'import a valid flow success' 1`] = `
{
  "children": [
    {
      "81HAL73ElW": [],
    },
    {
      "Hz22QyhCpj": [],
    },
    {
      "THgI9WvsJh": [
        "mbL_mB1wGOY",
      ],
    },
  ],
  "edges": [
    {
      "id": "reactflow__edge-81HAL73ElWoutput-Hz22QyhCpjinput",
      "source": "81HAL73ElW",
      "sourceHandle": "output",
      "target": "Hz22QyhCpj",
      "targetHandle": "input",
    },
    {
      "id": "reactflow__edge-Hz22QyhCpjoutput-THgI9WvsJhinput",
      "source": "Hz22QyhCpj",
      "sourceHandle": "output",
      "target": "THgI9WvsJh",
      "targetHandle": "input",
    },
  ],
  "eipIds": [
    {
      "name": "inbound-gateway",
      "namespace": "web-services",
    },
    {
      "name": "transformer",
      "namespace": "integration",
    },
    {
      "name": "outbound-gateway",
      "namespace": "http",
    },
  ],
  "layout": {
    "density": "comfortable",
    "orientation": "horizontal",
  },
  "nodes": [
    {
      "data": {
        "label": "ws-in",
      },
      "dragging": false,
      "height": 124,
      "id": "81HAL73ElW",
      "position": {
        "x": 0,
        "y": 0,
      },
      "selected": false,
      "sourcePosition": "right",
      "targetPosition": "left",
      "type": "eipNode",
      "width": 128,
    },
    {
      "data": {},
      "dragging": false,
      "height": 87,
      "id": "Hz22QyhCpj",
      "position": {
        "x": 203,
        "y": 18.5,
      },
      "selected": false,
      "sourcePosition": "right",
      "targetPosition": "left",
      "type": "eipNode",
      "width": 99,
    },
    {
      "data": {},
      "dragging": false,
      "height": 121,
      "id": "THgI9WvsJh",
      "position": {
        "x": 377,
        "y": 5.5,
      },
      "selected": false,
      "sourcePosition": "right",
      "targetPosition": "left",
      "type": "eipNode",
      "width": 109,
    },
  ],
}
`;
